# tracelogging

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEPENDENCIES  NOTICE.md  README.md  TODO  azure-pipelines.yml
.github/: CODEOWNERS
.github/workflows/: LTTng.yml  rust.yml
LTTng/: CMakeLists.txt  CMakePresets.json  README.md
LTTng/cmake/modules/: AliasPkgConfigTarget.cmake  Findlttng-ust-tracepoint.cmake
LTTng/src/: CMakeLists.txt  LttngNetHelpers.c
LTTng/test/: CMakeLists.txt  CatchMain.cpp  TestFunctions.h  TestTraceLogging.c  TestTraceLogging.cpp  TestTraceLogging.h  main.cpp
cmake/modules/: FindLTTngUST.cmake  traceloggingConfig.cmake
etw/: README.md
etw/TraceLoggingDynamic_CPP/: TraceLoggingDynamic.h
etw/TraceLoggingDynamic_CS/: README.md  TraceLoggingDynamic.cs
etw/TraceLoggingDynamic_CS/tests/: Program.cs  TraceLoggingDynamicTest.csproj
etw/TraceLoggingDynamic_Python/: README.md  setup.cfg
etw/TraceLoggingDynamic_Python/tests/: traceloggingdynamictest.py
etw/cpp/traceloggingdynamic/: README.md  TraceLoggingDynamic.h
etw/cs/traceloggingdynamic/: TraceLoggingDynamic.cs
etw/cs/traceloggingdynamic/tests/: Program.cs
etw/python/traceloggingdynamic/: setup.cfg  traceloggingdynamic.py
etw/python/traceloggingdynamic/tests/: traceloggingdynamictest.py
etw/python/traceloggingdynamic/traceloggingdynamic/: __init__.py
etw/rust/: Cargo.toml  README.md
etw/rust/tracelogging/: Cargo.toml  README.md
etw/rust/tracelogging/examples/: generate_events.rs
etw/rust/tracelogging/src/: _internal.rs  changelog.rs  descriptors.rs  enums.rs  guid.rs  lib.rs  native.rs  provider.rs  tests.rs
etw/rust/tracelogging/tests/: tests.rs
etw/rust/tracelogging/tracelogging_macros/: Cargo.toml
etw/rust/tracelogging/tracelogging_macros/examples/: print_field_options.rs
etw/rust/tracelogging/tracelogging_macros/src/: enums.rs  errors.rs  event_generator.rs  event_info.rs  expression.rs  field_info.rs  field_option.rs  field_options.rs  ident_builder.rs  lib.rs  parser.rs  provider_generator.rs  provider_info.rs  strings.rs  tree.rs
etw/rust/tracelogging_dynamic/: Cargo.toml  README.md
etw/rust/tracelogging_dynamic/src/: builder.rs  changelog.rs  lib.rs  provider.rs  tests.rs
etw/rust/tracelogging_dynamic/tests/: tests.rs
etw/rust/tracelogging_macros/: Cargo.toml  README.md
etw/rust/tracelogging_macros/examples/: print_field_options.rs
etw/rust/tracelogging_macros/src/: errors.rs  event_generator.rs  event_info.rs  expression.rs  field_info.rs  field_option.rs  field_options.rs  ident_builder.rs  lib.rs  parser.rs  provider_generator.rs  provider_info.rs  strings.rs  tree.rs
include/lttngh/: LttngHelpers.h
include/lttnghroot/lttngh/: LttngHelpers.h
include/tracelogging/: TraceLoggingProvider.h
include/traceloggingroot/tracelogging/: TraceLoggingProvider.h
src/: CMakeLists.txt  LttngActivityHelpers.c  LttngHelpers.c  LttngNetHelpers.c
test/: CMakeLists.txt  TestTraceLogging.cpp  TestTraceLogging.h
vcpkg/ports/tracelogging/: portfile.cmake  vcpkg.json
vcpkg/versions/: baseline.json
