[metadata]
name = traceloggingdynamic
version = 1.0.0
author = Doug Cook
description = Generates Event Tracing for Windows events using TraceLogging
license = MIT License
keywords = TraceLogging, ETW, TraceLoggingDynamic, events, tracing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/microsoft/tracelogging
project_urls =
    Bug Tracker = https://github.com/microsoft/tracelogging/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Intended Audience :: Developers
    Topic :: System :: Logging

[options]
py_modules = traceloggingdynamic
python_requires = >=3.6
