[package]
name = "tracelogging"
version = "0.1.0"
edition = "2021"

[features]
default = ["etw", "macros"]
etw = [] # Everything is a no-op unless windows && etw.
macros = ["dep:tracelogging_macros"]

[dependencies]
tracelogging_macros = { path = "tracelogging_macros", optional = true }

[dev-dependencies]
windows = ">= 0.39"
uuid  = ">= 1.1"
