[package]
name = "tracelogging"
version = "1.2.2"
edition = "2021"
authors = ["Microsoft"]
license = "MIT"
description = "TraceLogging for Rust"
keywords = [
    "etw",
    "tracelogging",
    "trace",
    "logging",
    "windows",
]
categories = [
    "api-bindings",
    "development-tools::debugging",
    "development-tools::profiling",
    "no-std",
    "os::windows-apis",
]
repository = "https://github.com/microsoft/tracelogging"
readme = "README.md"
rust-version = "1.63"

[features]
default = ["etw", "macros"]
etw = [] # Logging is enabled if windows && etw.
kernel_mode = []
macros = ["dep:tracelogging_macros"]

[dependencies]
tracelogging_macros = { optional = true, version = "= 1.2.0", path = "../tracelogging_macros" }

[dev-dependencies]
windows = ">= 0.39"
uuid  = ">= 1.1"
