[package]
name = "tracelogging_dynamic"
version = "0.1.0"
edition = "2021"
authors = ["Microsoft"]
license = "MIT"
description = "TraceLoggingDynamic for Rust"
repository = "https://github.com/microsoft/tracelogging"
readme = "../README.md"
rust-version = "1.63"

[features]
default = ["etw"]
etw = ["tracelogging/etw"] # Logging is enabled if windows && etw.

[dependencies]
tracelogging = { path = "../tracelogging", default-features = false }
