[package]
name = "tracelogging_dynamic"
version = "1.1.0"
edition = "2021"
authors = ["Microsoft"]
license = "MIT"
description = "TraceLoggingDynamic for Rust"
keywords = [
    "etw",
    "tracelogging",
    "trace",
    "logging",
    "windows",
]
categories = [
    "api-bindings",
    "development-tools::debugging",
    "development-tools::profiling",
    "no-std",
    "os::windows-apis",
]
repository = "https://github.com/microsoft/tracelogging"
readme = "README.md"
rust-version = "1.63"

[features]
default = ["etw"]
etw = ["tracelogging/etw"] # Logging is enabled if windows && etw.

[dependencies]
tracelogging = { default-features = false, version = "= 1.0.2", path = "../tracelogging" }
